--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
       </section>
       <section class="graphic row justify-content-between" id="graphic">
-      <h2 class="section-title">Диограмма</h2>
+      <h2 class="section-title">Диaграмма</h2>
 <!--      <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>-->
         <div style="width:50%;">
           <canvas id="myChart"></canvas>
